--- a/index.html
+++ b/index.html
@@ -5,46 +5,100 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Paulus Notarizations</title>
   <link rel="icon" type="image/png" href="jp-favicon.png">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
   <style>
+    :root {
+      --primary: #0D3B3B;
+      --accent: #E8B04A;
+      --background: #FDF6ED;
+      --text: #2E2E2E;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
     body {
-      font-family: Arial, sans-serif;
-      background: #f9f9f9;
-      color: #333;
+      font-family: 'Inter', sans-serif;
+      background-color: var(--background);
+      color: var(--text);
       margin: 0;
       padding: 0;
+      line-height: 1.6;
     }
+
     header {
-      background-color: #002244;
+      background-color: var(--primary);
       color: white;
-      padding: 1rem;
+      padding: 2rem 1rem;
       text-align: center;
     }
+
+    header h1 {
+      font-family: 'Playfair Display', serif;
+      font-size: 2.5rem;
+      margin-bottom: 0.5rem;
+    }
+
+    header p {
+      font-size: 1.1rem;
+    }
+
     section {
-      padding: 2rem;
-      max-width: 800px;
+      padding: 2.5rem 1.5rem;
+      max-width: 900px;
       margin: auto;
     }
+
     h2 {
-      color: #002244;
+      font-family: 'Playfair Display', serif;
+      color: var(--primary);
+      font-size: 2rem;
+      margin-bottom: 1rem;
     }
-    .services, .contact, .testimonials {
-      margin-top: 2rem;
+
+    ul {
+      padding-left: 1.2rem;
     }
-    .footer {
-      background-color: #002244;
+
+    ul li {
+      margin-bottom: 0.5rem;
+    }
+
+    .btn {
+      background-color: var(--accent);
+      color: var(--primary);
+      padding: 0.75rem 1.5rem;
+      text-decoration: none;
+      border-radius: 6px;
+      display: inline-block;
+      font-weight: 600;
+      margin-top: 1rem;
+      transition: background-color 0.3s;
+    }
+
+    .btn:hover {
+      background-color: #d19b3b;
+    }
+
+    .contact p, .services p {
+      font-size: 1rem;
+    }
+
+    .testimonials em {
+      display: block;
+      margin-bottom: 1rem;
+      font-style: italic;
+      font-size: 1.05rem;
+    }
+
+    footer {
+      background-color: var(--primary);
       color: white;
       text-align: center;
       padding: 1rem;
-      margin-top: 2rem;
-    }
-    .btn {
-      background-color: #0066cc;
-      color: white;
-      padding: 0.75rem 1.5rem;
-      text-decoration: none;
-      border-radius: 5px;
-      display: inline-block;
-      margin-top: 1rem;
+      margin-top: 3rem;
+      font-size: 0.9rem;
     }
   </style>
 </head>
@@ -87,7 +141,7 @@
     <p><em>"He handled everything with care, clarity, and patience. I trust James completely — and I’m proud to support his work."</em> – D. Dávila</p>
   </section>
 
-  <footer class="footer">
+  <footer>
     <p>&copy; 2025 Paulus Notarizations · Commissioned in the State of Florida</p>
   </footer>
 </body>
